# comfyui-runpod-agentic-nodes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  __init__.py  pyproject.toml  runpod_comfyui_agentic_nodes_spec.md
comfyui_runpod_agentic/: __init__.py  backends.py  cleanup.py  config.py  harnesses.py  keepalive_timer.py  live_smoke.py  local_runtime.py  nodes.py  planner.py  routes.py  runner.py  runpod_client.py  runpod_options.py  runtime_contracts.py  schema_check.py  setup_commands.py  specs.py  ssh_client.py  state_store.py  template_admin.py  template_resolver.py  types.py  validation.py
defaults/: config.example.yaml  runpod_template_ids.json  runpod_templates.bootstrap.json  templates.example.yaml
docs/: user_guide.md
scripts/: build  check-runpod-schema  cleanup-runpod-pods  comfy-server  create-runpod-templates  e2e-comfy-container-snapshot  e2e-comfy-cpu  e2e-comfy-local-agent-skills  e2e-comfy-local-ollama-deepseek  e2e-comfy-local-runtime  e2e-local-browser-screenshot-live  e2e-local-build-then-run-image  e2e-local-container-snapshot-live  e2e-local-database-skills-live  e2e-local-harness-installs-live  e2e-local-keepalive-timeout  e2e-local-mcp-ollama-cloud-live  e2e-local-runtime  e2e-local-subagent-ollama-cloud-live  e2e-runpod-keepalive-timeout  lint  run-live-smoke  screenshot-ui-workflows  submit-comfy-api-workflow  test  test-all
tests/: test_auth_and_logs.py  test_backends.py  test_keepalive_timer.py  test_local_runtime.py  test_planner.py  test_routes_and_cli.py  test_runner.py  test_runpod_client_mock.py  (+6 more)
(+50 files in other folders)
