[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "comfyui-runpod-agentic"
version = "0.1.0"
description = "ComfyUI custom nodes for declarative Runpod agentic deployments."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ssube" }]
dependencies = [
  "aiohttp>=3.9",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.48",
  "pre-commit>=4.0",
  "pytest-cov>=5.0",
  "pytest>=8.3",
  "ruff>=0.8",
  "build>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["comfyui_runpod_agentic"]
include = [
  "__init__.py",
  "defaults/*.yaml",
  "templates/**/*.j2",
  "web/*.js",
]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "__init__.py"
"defaults" = "defaults"
"templates" = "templates"
"web" = "web"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "--cov=comfyui_runpod_agentic",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["comfyui_runpod_agentic"]
omit = [
  "comfyui_runpod_agentic/live_smoke.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
